--- a/cv/core.css
+++ b/cv/core.css
@@ -24,6 +24,7 @@ body {
     --neutral-300: #ccc;
     --neutral-200: #eee;
     --neutral-100: #fcfcfc;
+    --neutral-000: #fff;
 
     --neutral-font: 'Quicksand', sans-serif;
 
@@ -117,7 +118,7 @@ ul {
 
 p {
     font-size: 16px;
-    margin-bottom: 18px;
+    margin: 0;
     font-weight: 300;
     color: var(--neutral-100)
 }
@@ -152,7 +153,7 @@ hr {
     justify-content: center;
     align-items: center;
     background-color: var(--neutral-800);
-    color: var(--tn-primary);
+    color: var(--neutral-000);
     border-radius: var(--border-radius);
     padding: 6px 8px;
     transition: 0.2s ease-in-out;
