--- a/cv/core.css
+++ b/cv/core.css
@@ -13,7 +13,7 @@ html, body {
 }
 
 body {
-    background-color: var(--background);
+    background: var(--background);
 }
 
 :root {
@@ -117,7 +117,7 @@ ul {
 }
 
 p {
-    font-size: 14px;
+    font-size: 15px;
     margin: 0;
     font-weight: 300;
     color: var(--neutral-100)
