--- a/cv/core.css
+++ b/cv/core.css
@@ -17,8 +17,10 @@ body {
 }
 
 :root {
-    /* Colors */
     --background: #333;
+
+    --primary-000: #8c52ff;
+
     --neutral-800: #888;
     --neutral-400: #bbb;
     --neutral-300: #ccc;
@@ -29,20 +31,6 @@ body {
     --neutral-font: 'Quicksand', sans-serif;
 
     --border-radius: 10px;
-
-    --tn-lighter-main: #515152;
-    --tn-primary: #8c52ff;
-
-    --tn-secondary: #fff;
-    --tn-mid-grey: #666;
-    --tn-light-grey: #bbb;
-    --tn-lighter-grey: #edeef5;
-    --tn-main-bg-color: #1c1c1c;
-    --tn-menu-bg-color: #101010;
-    --tn--bg--light: #ffffff;
-
-    --tn-text-color: #b4b4b4;
-    --tn--text--light: #1b232a;
 
     --box--shadow--large: 0px 0px 50px 25px black;
     --box--shadow--small: 0 10px 30px 5px black;
@@ -60,7 +48,7 @@ header {
 }
 
 h1 {
-    color: var(--tn-primary);
+    color: var(--primary-000);
     font-family: var(--neutral-font);
     font-size: 40px;
     font-weight: 700;
@@ -102,7 +90,7 @@ h5 {
     margin: 14px 0 8px;
     font-size: 18px;
     font-weight: 500;
-    font-family: var(--neutral-font);;
+    font-family: var(--neutral-font);
     margin: 0;
 }
 
@@ -158,4 +146,44 @@ hr {
     padding: 6px 8px;
     transition: 0.2s ease-in-out;
     width: max-content;
+}
+
+.tag-list div:hover {
+    transform: translateY(-2px);
+    cursor: pointer;
+    color: var(--primary-000);
+}
+
+/* UIKIT Print Overrides */
+@media print{
+    *,::after,::before{
+        background:var(--background)!important;
+        color:var(--neutral-100)!important;
+        box-shadow:none!important;
+        text-shadow:none!important
+    }
+    h1 {
+        color: var(--primary-000) !important;;
+    }
+    h2 {
+        color: var(--neutral-100) !important;
+    }
+    h3 {
+        color: var(--neutral-200) !important;
+    }
+    h4 {
+        color: var(--neutral-400) !important;
+    }
+    h5 {
+        color: var(--neutral-400) !important;
+    }
+    p {
+        color: var(--neutral-100) !important;
+    }
+    ul {
+        color: var(--neutral-100) !important;
+    }
+    .tag-list div {
+        background-color: var(--neutral-800) !important;
+    }
 }
