--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,7 @@ section {
 section::before {
   content: "";
   position: absolute;
-  top: -100px;
+  top: -50px;
   bottom: 0;
   opacity: 0.7;
   filter: blur(10em);
@@ -696,6 +696,10 @@ button.btn {
 
   .section-title h2 {
       font-size: 4rem;
+  }
+
+  section::before {
+    top: -100px;
   }
 
 }
