--- a/src/components/About/index.css
+++ b/src/components/About/index.css
@@ -1,4 +1,20 @@
 
+[data-section="about"]::after {
+    content: "";
+    position: absolute;
+    margin: auto 0px;
+    top: 0;
+    left: -150px;
+    bottom: 0;
+    opacity: 0.7;
+    filter: blur(10em);
+    background: rgb(130,68,255);
+    background: linear-gradient(126deg, rgba(130,68,255,1) 40%, rgba(249,38,174,1) 100%);
+    border-radius: 9999px;
+    width: 300px;
+    height: 300px;
+}
+
 [data-section="about"] .background-text {
     left: 5%;
     bottom: 40%;
