--- a/src/components/SideBar/index.css
+++ b/src/components/SideBar/index.css
@@ -2,7 +2,7 @@
     width: 40px;
     position: fixed;
     left: auto;
-    right: 10px;
+    right: 20px;
     z-index: 10;
 }
 
@@ -12,4 +12,13 @@
         display: none !important;
     }
   
+}
+
+@media only screen and (min-width: 1280px) {
+
+    .vertical-container {
+        right: 15px;
+
+    } 
+
 }
