--- a/src/components/Projects/index.css
+++ b/src/components/Projects/index.css
@@ -49,7 +49,7 @@
     box-shadow: 0px 0px 300px 50px black;
 }
 
-.project-image > img {
+.project-image img {
     border-radius: 5px;
     box-shadow: var(--box--shadow--large);
     border: 2px solid rgba(13, 28, 54, 0.7);
