Projects Container Fix

--- a/src/components/Projects/responsive.css
+++ b/src/components/Projects/responsive.css
@@ -5,6 +5,10 @@
         padding-left: 0;
     }
 
+    .projects-area {
+        margin: 0;
+    }
+
     .other-project-header {
         font-size: 3rem;
     }
