--- a/src/components/Projects/index.css
+++ b/src/components/Projects/index.css
@@ -34,6 +34,11 @@
     font-size: 27rem;
 }
 
+.projects-area {
+    margin-left: -1.3rem;
+    margin-right: -0.875rem;
+}
+
 .project-image-container {
     transition: all ease-in-out 0.15s;
 }
