--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -21,3 +21,11 @@
     padding: 1.25rem 2rem;
     font-size: large;
 }
+
+@media (orientation:landscape) and (max-height: 600px){
+
+    [data-section="contact"].area {
+      padding: 3rem 3.5rem 9rem 4rem;
+    }
+  
+  }
