--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -284,3 +284,67 @@
     font-family: 'La Belle Aurore', cursive;
     margin: 0;
 }
+
+/* Small devices (portrait tablets and large phones, 640px and up) */
+@media only screen and (min-width: 640px) {
+
+    .projects-title {
+        padding-left: 0;
+    }
+
+    .projects-area {
+        margin: 0;
+    }
+
+    .other-project-header {
+        font-size: 3rem;
+    }
+
+    .project-container:nth-of-type(odd) .project-content {
+        text-align: left !important;
+        margin-right: 0;
+        margin-left: 0;
+    }
+    
+    .project-container:nth-of-type(even) .project-content {
+        text-align: right !important;
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .project-container:nth-of-type(even) .project-tech-stack {
+        justify-content: end;
+    }
+    
+    .project-container:nth-of-type(even) .project-tech-stack li {
+        margin: 0px 0px 5px 20px;
+    }
+
+    .project-container:nth-of-type(even) .project-links {
+        justify-content: flex-end;
+    }    
+
+    .project-container:nth-of-type(2n) .project-links a:first-child {
+        margin-left: 20px;
+        margin-right: 0px;
+    }
+
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1280px) {
+
+    .project-container:nth-of-type(odd) .project-content{
+        margin-right: -150px;
+    }
+    
+    .project-container:nth-of-type(even) .project-content {
+        margin-left: -150px;
+    }
+
+    [data-section="projects"] .background-text {
+        left: 3rem;
+        transform: rotateZ(25deg);
+    }
+
+}
