--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -36,3 +36,31 @@
     color: theme('colors.pink');
 }
 */
+
+@media only screen and (min-width: 768px) {
+    [data-section="skills"] .background-text {
+        font-size: 18rem;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    [data-section="skills"] .background-text {
+        font-size: 22rem;
+    }
+}
+
+@media only screen and (min-width: 1280px) {
+    [data-section="skills"] {
+        height: 100vh;
+    }
+
+    [data-section="skills"] .background-text {
+        font-size: 27rem;
+    }
+}
+
+@media only screen and (min-width: 1536px) {
+    [data-section="skills"] .background-text {
+        font-size: 30rem;
+    }
+}
