Minor Skills Section Update
Using &#125; for a reversed bracket instead of a CSS class. Other minor fixes.

--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -22,10 +22,12 @@
     left: 0;
 }
 
+/* Using &#125; for reversed bracket
 .reversed-bracket {
     display: inline-block;
-    transform: scaleX(-1); /* Flip horizontally */
-  }
+    transform: scaleX(-1);
+} 
+*/
 
 /*
 [data-section="skills"] .section-title h2 span:first-of-type {
